chore: implement clean code and structure
